k8s/spending/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spending-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/spending-app/
            pathType: "Prefix"
            backend:
              service:
                name: spending-service
                port:
                  number: 80
